[package]
name = "solution"
version = "0.1.0"
authors = ["Brian Lake <bnlake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
rectangle = { path = "../rectangle" }
utils = { path = "../utils" }